no failed: ppp no local address
no failed: ppp with packet over txtls
no failed: ppp with packet over tls
no failed: ppp over gtp
qc pass: ppp over gtp
qc pass: ppp with packet over tls
qc pass: ppp with packet over txtls
qc pass: ppp no local address
qc pass: ppp over tcp with asymmetric sack
qc pass: vpls/ldp with ingress rtfilter
qc pass: ibgp rr otherl3evpns prefix movement
qc pass: bgp aspa rpki invalid
qc pass: isis over ppp
---------------------------------- 2026-02-09 11:39:57 26.2.9
no qc pass: ospf point2multipoint nonbroadcast connection
failed: ospf point2multipoint nonbroadcast connection
---------------------------------- 2026-02-09 12:49:13 26.2.9
no failed: ospf point2multipoint nonbroadcast connection
qc pass: ospf point2multipoint nonbroadcast connection
---------------------------------- 2026-02-11 22:01:48 26.2.11
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2026-02-11 22:42:42 26.2.11
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2026-02-14 17:00:25 26.2.14
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2026-02-14 17:49:19 26.2.14
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2026-02-15 11:14:02 26.2.15
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2026-02-15 12:32:14 26.2.15
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2026-02-23 09:29:48 26.2.23
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2026-02-23 10:14:47 26.2.23
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2026-02-25 15:47:38 26.2.25
no qc pass: wireguard over ipv4
failed: wireguard over ipv4