@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.25-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-25 16:32:12, took 00:11:18, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2026-02-25 17:08:05, took 00:10:47, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
